--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
     margin: 30px;
     background-color: #f4f4f4;
     color: #333;
-    display: flex;
+    display: transparent;
     justify-content: center;
     align-items: flex-start;
     min-height: 10vh;
