--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 body {
     font-family: sans-serif;
     padding-top: calc(20px + env(safe-area-inset-top));
-    margin: 20px;
+    margin: 0;
     background-color: #f4f4f4;
     color: #333;
     display: flex;
