--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 
 body {
     font-family: sans-serif;
-    padding-top: calc(20px + env(safe-area-inset-top));
+    padding-top: 30px;
     padding: 30px;
     margin: 0;
     background-color: #f4f4f4;
