--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 body {
     font-family: sans-serif;
     padding: 30px;
-    margin: 100px;
+    margin-top: 100px;
     background-color: #f4f4f4;
     color: #333;
     display: flex;
